<resources>
    <string name="app_name">Practicum-Android-Diploma</string>

    <!-- Экран поиска вакансий -->
    <string name="search_screen_title">Поиск вакансий</string>
    <string name="search_input_hint">Введите запрос</string>
    <string name="found">Найдено</string>
    <string name="salary_from">от %1$s %2$s</string>
    <string name="salary_to">до %1$s %2$s</string>
    <string name="salary_from_to">от %1$s до %2$s %3$s</string>
    <string name="no_salary">Зарплата не указана</string>
    <string name="salary_level_not_specified">Уровень зарплаты не указан</string>
    <string name="no_company">Компания не указана</string>
    <string name="back">Назад</string>
    <string name="vacancies_filter">Фильтр вакансий</string>
    <string name="search_description">Поиск</string>
    <string name="search_clear_description">Очистить поиск</string>

    <plurals name="vacancy_found_count">
        <item quantity="zero">Найдено %d вакансий</item>
        <item quantity="one">Найдена %d вакансия</item>
        <item quantity="few">Найдено %d вакансий</item>
        <item quantity="many">Найдено %d вакансий</item>
        <item quantity="other">Найдено %d вакансий</item>
    </plurals>

    <!--Панель навигации -->
    <string name="main">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="team">Команда</string>

    <!-- Текст для плейсхолдеров на экране поиска -->
    <string name="no_internet_error">Нет интернета</string>
    <string name="no_vacancies">Таких вакансий нет</string>
    <string name="no_vacancies_error">Не удалось получить \n список вакансий</string>
    <string name="search_server_error">Ошибка сервера</string>


    <string name="team_screen_subtitle">Над приложением&#10;работали</string>
    <!-- Участники команды разработки -->
    <string name="team_member_1">Никита Мигаль</string>
    <string name="team_member_2">Максим Лищук</string>
    <string name="team_member_3">Кирилл Портнов</string>
    <string name="team_member_4">Андрей Ермолин</string>
    <string name="team_member_5">Иван Лапковский</string>

    <string name="network_error_toast">Произошла ошибка</string>

    <!-- Экран деталей вакансии -->
    <string name="vacancy_screen_title">Вакансия</string>
    <string name="vacancy_required_experience">Требуемый опыт</string>
    <string name="vacancy_description_title">Описание вакансии</string>
    <string name="vacancy_key_skills_title">Ключевые навыки</string>
    <string name="vacancy_contacts_title">Контакты</string>
    <string name="vacancy_not_found_error">Вакансия не найдена</string>
    <string name="vacancy_server_error">Не удалось получить\nвакансию</string>
    <string name="share">Поделиться</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="send_email">Написать на почту</string>
    <string name="make_call">Позвонить</string>
    <string name="share_link">Поделиться ссылкой</string>
    <string name="industry_search_hint">Введите отрасль</string>
    <!-- Экран избранных вакансий-->
    <string name="favorite_vacancies_title">Избранное</string>
    <string name="no_favorite_vacancies">Список пуст</string>
    <string name="filter_settings_title">Настройки фильтрации</string>
    <string name="filter_settings_country_title">Место работы</string>
    <string name="specialization_title">Отрасль</string>
    <string name="input_amount_hint">Введите сумму</string>
    <string name="filter_settings_salary_title">Ожидаемая зарплата</string>
    <string name="do_not_show_without_salary_title">Не показывать без зарплаты</string>
    <string name="cancel_button_text">Сбросить</string>
    <string name="apply_button_text">Применить</string>

    <!-- Экран выбора страны-->
    <string name="choose_country">Выбор страны</string>
    <string name="choose_country_error">Не удалось получить список</string>

    <!-- Экран отраслей -->
    <string name="industry_choice_title">Выбор отрасли</string>
    <string name="region_search_placeholder_text">Введите отрасль</string>
    <string name="industry_server_error">Не удалось получить\nсписок</string>
    <string name="choose_button_text">Выбрать</string>

    <!-- Экран выбора региона -->
    <string name="choose_region_title">Выбор региона</string>
    <string name="choose_region_search_hint">Введите регион</string>
    <string name="choose_region_not_found">Такого региона нет</string>
    <string name="choose_region_error">Не удалось получить\nсписок</string>

    <!-- Экран места работы-->
    <string name="place_of_work">Выбор места работы</string>
    <string name="place_of_work_country">Страна</string>
    <string name="place_of_work_region">Регион</string>
    <string name="place_of_work_apply">Применить</string>

    <string name="filter">Фильтр</string>


</resources>
