<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="ru.practicum.android.diploma.search.presentation.SearchFragment"
        android:label="@string/search_screen_title">

        <action
            android:id="@+id/action_searchFragment_to_filterSettingsFragment"
            app:destination="@id/filterSettingsFragment" />

        <action
            android:id="@+id/action_searchFragment_to_vacancyDetailsFragment"
            app:destination="@id/vacancyDetailsFragment" />

    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="ru.practicum.android.diploma.favorites.presentation.FavoritesFragment"
        android:label="@string/favorite_vacancies_title">

        <action
            android:id="@+id/action_favoritesFragment_to_vacancyDetailsFragment"
            app:destination="@id/vacancyDetailsFragment" />

    </fragment>

    <fragment
        android:id="@+id/teamFragment"
        android:name="ru.practicum.android.diploma.team.presentation.TeamFragment"
        android:label="@string/team" />

    <fragment
        android:id="@+id/filterSettingsFragment"
        android:name="ru.practicum.android.diploma.search.presentation.filter.FilterSettingsFragment"
        android:label="@string/filter_settings_title">

        <action
            android:id="@+id/action_filterSettingsFragment_to_placeOfWorkFragment"
            app:destination="@id/placeOfWorkFragment" />

        <action
            android:id="@+id/action_filterSettingsFragment_to_industrySelectionFragment"
            app:destination="@id/industrySelectionFragment" />

    </fragment>

    <fragment
        android:id="@+id/placeOfWorkFragment"
        android:name="ru.practicum.android.diploma.search.presentation.place.PlaceOfWorkFragment"
        android:label="@string/place_of_work">

        <action
            android:id="@+id/action_placeOfWorkFragment_to_countrySelectionFragment"
            app:destination="@id/countrySelectionFragment" />
        <action
            android:id="@+id/action_placeOfWorkFragment_to_regionSelectionFragment"
            app:destination="@id/regionSelectionFragment" />

    </fragment>

    <fragment
        android:id="@+id/countrySelectionFragment"
        android:name="ru.practicum.android.diploma.search.presentation.country.CountrySelectionFragment"
        android:label="@string/choose_country" />

    <fragment
        android:id="@+id/regionSelectionFragment"
        android:name="ru.practicum.android.diploma.search.presentation.regions.RegionSelectionFragment"
        android:label="@string/choose_region_title" />

    <fragment
        android:id="@+id/industrySelectionFragment"
        android:name="ru.practicum.android.diploma.search.presentation.IndustrySelectionFragment"
        android:label="@string/industry_choice_title" />

    <fragment
        android:id="@+id/vacancyDetailsFragment"
        android:name="ru.practicum.android.diploma.details.presentation.DetailsFragment"
        android:label="@string/vacancy_screen_title">

        <argument
            android:name="vacancyId"
            app:argType="string" />

        <argument
            android:name="logoUrl"
            app:argType="string"
            android:defaultValue="" />

    </fragment>

</navigation>
